# nbd-server

./: Cargo.toml  README.md
.github/workflows/: rust.yml
design/: clone-from-snapshot.md  multi-export-api.md  read-write-path.md  volume-repository.md
src/: admin.rs  bitmap.rs  cache.rs  config.rs  error.rs  export.rs  journal.rs  lib.rs  main.rs  manager.rs  manifest.rs  meta.rs  nbd.rs  remote.rs  volume.rs
src/app/: config.rs
src/core/: error.rs  mod.rs
src/core/cache/: local_cache.rs  mod.rs
src/core/engine/: export.rs  mod.rs  spec.rs
src/core/model/: cache_meta.rs  journal.rs  manifest.rs  mod.rs  volume.rs
src/core/nbd/: codec.rs  mod.rs  protocol.rs
src/core/storage/: mod.rs  object_store.rs  volume_repository.rs
src/server/: admin.rs  manager.rs  mod.rs  nbd.rs
src/storage/: memory.rs  mod.rs  object_store_volume_repository.rs  r2.rs  s3.rs
tests/intergration/: run_test.sh
