[package]
name = "nbd-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
aws-config = "1"
aws-sdk-s3 = "1"
aws-types = "1"
blake3 = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde", "serde-well-known"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempfile = "3"
